# arm11

./: CMakeLists.txt
Extension/part4_extension/: Makefile  machine.c
Extension/part4_extension/calculator/: calculator.c  calculator.h
Extension/part4_extension/counter/: counter.c  counter.h
Extension/part4_extension/part4_utility/: part4_utility.c  part4_utility.h  shine.c  shine.h
Extension/part4_extension/presenter/: presenter.c  presenter.h
Rini/src/: CMakeLists.txt  emulate.c
doc/: Checkpoint.tex  Report.tex
programs/: gpio.s
programs/part4_extension/calculator/: calculator.c
programs/part4_extension/counter/: counter.h
programs/part4_extension/part4_utility/: shine.h
src/: CMakeLists.txt  DefinedTypes.h  Makefile  assemble  binaryFileLoader.c  binaryFileLoader.h  dataprocessing_execute.c  dataprocessing_execute.h  decode.c  decode.h  emulate  emulate.c  execute.c  execute.h  executeBR.c  executeBR.h  executeDP.c  executeDP.h  executeMUL.c  executeMUL.h  executeSDT.c  executeSDT.h  fetch.c  fetch.h  helper.c  instruction.h  machine  memory.h  out  pipeline.c  pipeline.h  registers.h  state.h  utility.c  utility.h
src/Manshu/: DefinedTypes.h
src/multiplyInstruction/: Multiply.c
src/part1_emulator/: emulate.c
src/part1_emulator/decode/: decode.c  decode.h
src/part1_emulator/emulate/: binaryFileLoader.c  binaryFileLoader.h  pipeline.c  pipeline.h  printOutput.c  printOutput.h
src/part1_emulator/emulator_utility/: DefinedTypes.h  instruction.c  instruction.h  state.h  utility.c  utility.h
src/part1_emulator/execute/: execute.c  execute.h  executeBR.c  executeBR.h  executeDP.c  executeDP.h  executeMUL.c  executeMUL.h  executeSDT.c  executeSDT.h
src/part1_emulator/fetch/: fetch.c  fetch.h
src/part2_assembler/: assemble.c
src/part2_assembler/assembler_utility/: assembler_utility.c  assembler_utility.h  prints.c  prints.h  table.c  table.h
src/part2_assembler/binaryWriter/: binaryWriter.c  binaryWriter.h
src/part2_assembler/encode/: encode.c  encode.h  encodeBR.c  encodeBR.h  encodeDP.c  encodeDP.h  encodeMUL.c  encodeMUL.h  encodeSDT.c  encodeSDT.h  encodeSPECIAL.c  encodeSPECIAL.h
src/part2_assembler/readInstruction/: readInstruction.c  readInstruction.h
src/part2_assembler/readLabels/: readLabels.c  readLabels.h
src/part2_assembler/tokenizer/: tokenizer.c  tokenizer.h
src/part4_extension/: extension.txt  machine.c  machine.h  main.c  main.h  part4_utility.c  part4_utility.h
src/part4_extension/calculator/: calculator.c  calculator.h
src/part4_extension/counter/: counter.c  counter.h
src/part4_extension/part4_utility/: RPI.c  RPI.h  part4_utility.c  part4_utility.h  shine.c  shine.h
src/part4_extension/presenter/: presenter.c
